frontend/src/app/track-result/track-result.component.scss
/*!
 * Copyright (c) 2014-2026 Bjoern Kimminich & the OWASP Juice Shop contributors.
 * SPDX-License-Identifier: MIT
 */

@use '../../styles/variables' as *;

mat-card {
  h1 {
    margin-top: 0;
  }
}

.mdc-table {
  align-self: center;
  margin: 0 auto;           /* center the table block */
  width: 90%;
}

.heading {
  background: rgba(0, 0, 0, 0.2);
  height: 35px;
  justify-content: center;
  padding: 0 $space-ml;
  width: 90%;
}

.product-name {
  margin-right: $space-l;
}

.table-wrapper {
  display: flex;
  justify-content: center;
  margin-top: $space-xl;
}

.table-heading h4 {
  margin-bottom: 0;
}

.row.fa-4x svg {
  margin-right: $space-s;
}

.mat-own-card {
  display: block;
  margin-left: 20%;
  margin-right: 20%;
}

.bonus-container {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  margin-top: $space-s;
  place-content: stretch center;

  h2 {
    margin: 0;
    padding: 0;
  }
}

.delivery-status {
  text-align: center;
}

.eta-badge {
  width: max-content;
}

@media (max-width: 959.98px) {
  .mat-column-price { display: none; }
}

